# cargolifter

./: .gitignore  Cargo.toml  README.md  registry.json
.cargo/: config.toml
.github/workflows/: CI.yml
backend-gitea/: Cargo.toml  README.md
backend-gitea/src/: lib.rs
backend-gitea/src/api/: accept_merge_request.rs  create_file.rs  create_merge_request.rs  delete_branch.rs  get_file.rs  update_file.rs
backend-gitea/src/models/: accept_merge_request.rs  create_file.rs  create_merge_request.rs  get_file.rs  update_file.rs
backend-github/: Cargo.toml  README.md
backend-github/src/: api.rs  lib.rs  models.rs
backend-github/src/api/: close_pull_request.rs  create_branch.rs  create_pull_request.rs  delete_branch.rs  get_branch.rs  get_file.rs  merge_pull_request.rs  update_file.rs
backend-github/src/models/: close_pull_request.rs  create_branch.rs  create_pull_request.rs  get_branch.rs  get_file.rs  merge_pull_request.rs  update_file.rs
backend-gitlab/: Cargo.toml  README.md
backend-gitlab/src/: api.rs  lib.rs  models.rs
backend-gitlab/src/api/: accept_merge_request.rs  create_file.rs  create_merge_request.rs  delete_branch.rs  get_file.rs  update_file.rs
backend-gitlab/src/models/: accept_merge_request.rs  create_file.rs  create_merge_request.rs  get_file.rs  update_file.rs
cargolifter/: Cargo.toml
cargolifter/src/: main.rs
core/: Cargo.toml  README.md
core/src/: commands.rs  config.rs  lib.rs  models.rs  utils.rs
core/src/commands/: is_published.rs  publish.rs  utils.rs  yank.rs
core/src/config/: backend.rs  cargolifter.rs  filesystem.rs  gitea.rs  github.rs  gitlab.rs  s3.rs  storage.rs  web.rs
core/src/models/: publish.rs  storage.rs  yank.rs
src/: auth.rs  config.rs  git.rs  main.rs  mirror.rs  storage.rs  tools.rs  web.rs
src/auth/: null.rs
src/config/: cargolifter.rs  git.rs  service.rs  storage.rs
src/git/: callbacks.rs  model.rs  service.rs
src/services/: cargo_web.rs  mod.rs
src/storage/: filesystem.rs  s3.rs
src/web/: download.rs  publish.rs  service.rs  yank.rs
storage-filesystem/: Cargo.toml  README.md
storage-filesystem/src/: lib.rs
storage-s3/: Cargo.toml  README.md
storage-s3/src/: lib.rs
web/: Cargo.toml  README.md
web/src/: endpoints.rs  lib.rs
web/src/endpoints/: download.rs  publish.rs  yanking.rs
