[package]
name = "cargolifter"
version = "0.1.0"
authors = ["cemoktra <b.schubert82@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1"
axum = "0.2"
bytes = "1.1"
chrono = "0.4"
env_logger = "0.9"
git2 = "0.13"
hyper = "0.14"
log = "0.4"
tokio = { version = "1.2", features = ["full"] }
serde = { version = "1.0.70", features = ["derive"] }
serde_json = "1.0.24"
ureq = "2.2"