[package]
name = "cargolifter"
version = "0.2.2"
authors = ["cemoktra <b.schubert82@gmail.com>"]
edition = "2018"
description = "CargoLifter alternative registry"
readme = "README.md"
homepage = "https://github.com/cemoktra/cargolifter"
repository = "https://github.com/cemoktra/cargolifter"
license = "GPL-2.0"
keywords = ["cargo", "registry", "mirror"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1"
aws-config = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.19-alpha", package = "aws-config" }
aws-sdk-s3 = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.19-alpha", package = "aws-sdk-s3" }
aws-types = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.19-alpha", package = "aws-types" }
axum = "0.2"
bytes = "1.1"
chrono = "0.4"
env_logger = "0.9"
futures = "0.3"
git2 = "0.13"
hex = "0.4"
hyper = "0.14"
log = "0.4"
sha2 = "0.9"
tokio = { version = "1.2", features = ["full"] }
serde = { version = "1.0.70", features = ["derive"] }
serde_json = "1.0.24"
ureq = "2.2"