[workspace]
members = [
    "backend-github",
    "backend-gitlab",
    "cargolifter",
    "storage-filesystem",
    "storage-s3",
    "core",
    "web"
]

exclude = [
    "test"
]

[patch.crates-io]
cargolifter-core = { path = "core" }
cargolifter-backend-gitlab = { path = "backend-gitlab" }
cargolifter-backend-github = { path = "backend-github" }
cargolifter-storage-filesystem = { path = "storage-filesystem" }
cargolifter-storage-s3 = { path = "storage-s3" }
cargolifter-web = { path = "web" }