[package]
name = "cargolifter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1"
cargolifter-core = { path = "../core" }
cargolifter-backend-gitlab = { path = "../backend-gitlab" }
cargolifter-backend-github = { path = "../backend-github" }
cargolifter-storage-filesystem = { path = "../storage-filesystem" }
cargolifter-storage-s3 = { path = "../storage-s3" }
cargolifter-web = { path = "../web" }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.14", features = ["rt", "macros"] }
tracing-subscriber = "0.3"