[package]
name = "cargolifter"
version = "0.4.0"
edition = "2021"


description = "CargoLifter"
readme = "README.md"
homepage = "https://github.com/cemoktra/cargolifter"
repository = "https://github.com/cemoktra/cargolifter"
keywords = ["registy", "cargo", "cli"]
license = "GPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1"
cargolifter-core = "0.1"
# cargolifter-backend-gitlab = { path = "../backend-gitlab" }
cargolifter-backend-github = "0.1"
cargolifter-storage-filesystem = "0.1"
cargolifter-storage-s3 = "0.1"
cargolifter-web = "0.1"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.14", features = ["rt", "macros"] }
tracing-subscriber = "0.3"