[package]
name = "cargolifter"
version = "0.5.2"
edition = "2021"


description = "CargoLifter"
readme = "../README.md"
homepage = "https://github.com/cemoktra/cargolifter"
repository = "https://github.com/cemoktra/cargolifter"
keywords = ["registy", "cargo", "cli"]
license = "GPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1"
cargolifter-core = "0.3"
cargolifter-backend-gitlab = "0.2"
cargolifter-backend-github = "0.2"
cargolifter-storage-filesystem = "0.3"
cargolifter-storage-s3 = "0.3"
cargolifter-web = "0.2"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.14", features = ["rt", "macros"] }
tracing-subscriber = "0.3"

