[package]
name = "cargolifter-storage-filesystem"
version = "0.2.0"
edition = "2021"


description = "CargoLifter file system storage"
homepage = "https://github.com/cemoktra/cargolifter"
repository = "https://github.com/cemoktra/cargolifter"
keywords = ["registy", "cargo", "storage"]
license = "GPL-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
cargolifter-core = "0.2"
tracing = "0.1"