[package]
name = "cargolifter-storage-s3"
version = "0.3.1"
edition = "2021"


description = "CargoLifter S3 storage"
homepage = "https://github.com/cemoktra/cargolifter"
repository = "https://github.com/cemoktra/cargolifter"
keywords = ["registy", "cargo", "storage", "s3"]
license = "GPL-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
aws-config = "0.2"
aws-sdk-s3 = "0.2"
aws-types = "0.2"
bytes = "1.1"
cargolifter-core = "0.3"
tracing = "0.1"