[package]
name = "cargolifter-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
bytes = "1.1"
cargolifter-core = "0.1"
axum = { version = "0.2", features = ["headers"] }
hyper = "0.14"
# serde = { version = "1.0.70", features = ["derive"] }
serde_json = "1.0"
tokio = "1.14"
tracing = "0.1"