[package]
name = "cargolifter-web"
version = "0.2.0"
edition = "2021"


description = "CargoLifter web service"
homepage = "https://github.com/cemoktra/cargolifter"
repository = "https://github.com/cemoktra/cargolifter"
keywords = ["registy", "cargo", "web"]
license = "GPL-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1"
cargolifter-core = "0.3"
axum = { version = "0.2", features = ["headers"] }
hyper = "0.14"
serde_json = "1.0"
tokio = "1.14"
tracing = "0.1"